--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "check-code-coverage": "^1.10.5",
+    "framer-motion": "^10.12.16",
     "jest": "^27.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.0",
     "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
