--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.13.8",
     "react-test-renderer": "^18.2.0",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
