--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.8",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "cypress": "^12.14.0",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5"
