Fix code review commets
- refactoring code logic
- fix code style
- fix tests after refactoring

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "check-code-coverage": "^1.10.5",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.12.16",
     "jest": "^27.5.1",
     "prop-types": "^15.8.1",
@@ -27,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix --ext .js,.jsx ."
   },
   "eslintConfig": {
     "extends": [
